fix app spacing

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,6 +1,6 @@
 .App {
   margin: 0 auto;
-  padding: 2rem;
+  padding: 3rem 3rem 4rem;
   text-align: center;
   display: flex;
   flex-direction: column;
